# idris-clean

./: .gitignore  LICENSE  README.md  idris-clean.cabal  rules.ninja
Benchmarks/: build.ninja  fasta.idr  pidigits.idr  pythagoras.idr  quasigroups.idr  sortvec.idr
Benchmarks/Comparisons/: build.ninja  pythagorasBoxedLazy.icl  pythagorasBoxedStrict.icl  pythagorasUnboxedLazy.icl  pythagorasUnboxedStrict.icl
Examples/: build.ninja
Libraries/: StdInteger.dcl  StdInteger.icl  StdIntegerAdd.dcl  StdIntegerAdd.icl  StdIntegerDiv.dcl  StdIntegerDiv.icl  StdIntegerMul.dcl  StdIntegerMul.icl  StdIntegerToString.dcl  StdIntegerToString.icl  StdPointer.dcl  StdPointer.icl  StdPrim.dcl  StdPrim.icl  StdStringToInteger.dcl  StdStringToInteger.icl  SystemPrim.dcl
Sources/: Main.hs
Sources/IRTS/: CodegenClean.hs  TypeInfo.hs
Tests/: Ints.idr  build.ninja
src/IRTS/: CodegenClean.hs
